1.15.1
------
Support for python 3.

Native SSL support.

Support micro and nanosecond precision on timestamps.

Use std::unique_ptr instead of auto_ptr when available.

Use boost::shared_ptr if std::shared_ptr not available.

Support for Visual Studio 15 (2017).

Custom data fields can be decoded in header and trailer.

Can decode data fields in message body that contain more than 16 fields.

FieldMap iterators changed to non-const.

Message generator works with recursive components.

Preserve order of messages when resending.

Can configure a source host and port to choose routes.

Addressed several thread safety issues.

Regenerated messages against latest repository.

Faster sorting of fields.

Faster double/string conversion with Florian's Loitsch "double-conversion."

Replaceed std::multimap with std::vector for fields for improved performance.

Detect and throw InvalidMessage when data field length contains junk.

Fixed issues with integer_to_string()

Bug fix for large messages.

getField/setFields deprecated, use getTag/setTag.

Fixes for SunOS/sparc/64 bit.

Groups in headers.

1.14.3
------
Fixed buck in SocketConnection where recv result stored in signed value.

Added ruby api to RubyGems.

All Python and Ruby tests pass again.

1.14.2
------
Test for std::shared_ptr and std::tr1::shared_ptr.  Allows us to compile on
gcc 4.1-4.2, and with anaconda python.

Distribute FIX specs with pip package.

Use all detected compiler flags when building ruby native library.

1.14.1
------
Replaced libxml2 and MSXML dependencies with embedded pugixml.

Fixed all warnings from -Wshorten-64-to-32.

Added python api to PyPi.  Can be installed with 'pip install quickfix'.

Fixed memory leak in SessionFactory when creating DataDictionaries.
shared_ptr is used to track the objects so we don't have to.

1.14.0
------
Major performance improvement sending/receiving messages.  Thanks to 
Viktor Pogrebnyak for a great patch.
