@@ -388,6 +388,19 @@ If set, overrrides MillisecondsInTimeStamp.</td>
           <td>N</td>
         </tr>
 
+        <tr align="left" valign="middle">
+          <td><b>SendNextExpectedMsgSeqNum</b></td>
+
+          <td>Adds tag NextExpectedMsgSeqNum (789) to the Logon
+          message and enables session synchronisation at
+          initiation.</td>
+
+          <td>Y<br>
+          N</td>
+
+          <td>N</td>
+        </tr>
+
         <tr align="center" valign="middle">
           <td colspan="4" bgcolor="#DDDDDD"><h2>Validation</h2></td>
         </tr>
